Add DynamoDB and XRay

--- a/WebAppLambda/appsettings.json
+++ b/WebAppLambda/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "XRay": {
+    "DisableXRayTracing": "false",
+    "AWSXRayPlugins": "EC2Plugin",
+    "UseRuntimeErrors": "true"
+  }
 }
