--- a/WebAppLambda/WebAppLambda.csproj
+++ b/WebAppLambda/WebAppLambda.csproj
@@ -8,6 +8,9 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="6.0.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.14" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.0.1" />
+    <PackageReference Include="AWSXRayRecorder.Handlers.AspNetCore" Version="2.7.3" />
+    <PackageReference Include="AWSXRayRecorder.Handlers.AwsSdk" Version="2.8.3" />
   </ItemGroup>
 
 
