--- a/WebAppLambda/WebAppLambda.csproj
+++ b/WebAppLambda/WebAppLambda.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.0.1" />
     <PackageReference Include="AWSXRayRecorder.Handlers.AspNetCore" Version="2.7.3" />
     <PackageReference Include="AWSXRayRecorder.Handlers.AwsSdk" Version="2.8.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Formatting.Elasticsearch" Version="8.4.1" />
   </ItemGroup>
 
 
