--- a/WebAppLambda/appsettings.Development.json
+++ b/WebAppLambda/appsettings.Development.json
@@ -1,9 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "XRay": {
+    "DisableXRayTracing": "true"
+  },
+  "AWS": {
+    "Profile": "RFS_Ship_Admin"
   }
 }
